# IronBabel

./: .cursorrules  .gitignore  Cargo.toml  README.md  dependencies.md  projectinstructions.txt
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
assets/admin/: index.html
config/: gateway.yaml
docs/: admin-dashboard.md  architecture_improvements.md  configuration.md  dependencies.md  design_document.md  developer_notes.md  getting-started.md  protocols.md  security.md
licenses/: ALL_LICENSES.txt  Inflector-0.11.4.txt  README.txt  ahash-0.8.11.txt  aho-corasick-1.1.3.txt  anyhow-1.0.97.txt  arraydeque-0.5.1.txt  ascii_utils-0.9.3.txt  assert-json-diff-2.0.2.txt  async-channel-1.9.0.txt  async-graphql-7.2.1.txt  async-graphql-derive-7.2.1.txt  async-graphql-parser-7.2.1.txt  async-graphql-value-7.2.1.txt  async-io-2.6.0.txt  async-stream-0.3.6.txt  async-stream-impl-0.3.6.txt  async-trait-0.1.89.txt  asynk-strim-0.1.5.txt  atomic-waker-1.1.2.txt  autocfg-1.4.0.txt  aws-lc-rs-1.16.1.txt  aws-lc-sys-0.38.0.txt  axum-0.8.8.txt  axum-core-0.5.6.txt  base64-0.22.1.txt  bitflags-1.3.2.txt  bitflags-2.11.0.txt  block-buffer-0.10.4.txt  block-buffer-0.7.3.txt  block-padding-0.1.5.txt  bumpalo-3.17.0.txt  byte-tools-0.3.1.txt  byteorder-1.5.0.txt  bytes-0.4.12.txt  bytes-1.10.1.txt  cc-1.2.56.txt  cfg-if-0.1.10.txt  cfg-if-1.0.0.txt  cmake-0.1.54.txt  (+306 more)
scripts/: create_licenses.rs  test_gateway.py
src/: error.rs  lib.rs  main.rs
src/admin/: assets.rs  config_store.rs  handlers.rs  mod.rs  router.rs  store.rs  types.rs
src/config/: env.rs  file.rs  mod.rs
src/core/: gateway.rs  mod.rs  router.rs  types.rs
src/core/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
src/gateway/: amqp.rs  graphql.rs  grpc.rs  http.rs  mod.rs  mqtt.rs  ws.rs  zmq.rs
src/protocols/: amqp.rs  graphql.rs  grpc.rs  http.rs  mod.rs  mqtt.rs  ws.rs  zmq.rs
src/schema/: discovery.rs  generation.rs  mod.rs
src/transform/: json.rs  mod.rs  protobuf.rs
src/utils/: logging.rs  metrics.rs  mod.rs
tests/: gateway_test.rs  http_proxy_test.rs  integration_test.rs  test_config.rs
tests/common/: mod.rs
