[package]
name = "iron-babel"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Angelo <ryan.angelo@gmail.com>"]
description = "A cross-protocol API gateway for seamless service communication"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.45", features = ["rt-multi-thread", "signal", "macros", "fs"] }

# HTTP server and client
axum = "0.8"
hyper = "1.6"

# Protocol support
tonic = "0.13"
async-graphql = "7.0"
paho-mqtt = "0.13"
ws = "0.9"

# Serialization
serde = "1.0"
serde_json = "1.0"
prost = "0.14"

# Configuration
config = "0.15"
serde_yaml = "0.9"
toml = "0.8"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
async-trait = "0.1"
futures = "0.3"
tower = "0.5"
tower-http = "0.6"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[build-dependencies]
tonic-build = "0.13" 