[package]
name = "iron-babel"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Angelo <ryanangelo@icloud.com>"]
description = "A cross-protocol API gateway for seamless service communication"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "signal", "macros", "fs"] }

# HTTP server and client
axum = "0.8.8"
hyper = "1.1"

# Protocol support
tonic = "0.14.5"
async-graphql = "7.2.1"
paho-mqtt = "0.13.3"
ws = "0.9"

# Serialization
serde = "1.0"
serde_json = "1.0"
prost = "0.14.3"

# Configuration
config = "0.15.21"
serde_yaml = "0.9"
toml = "0.9.8"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0"

# Utilities
async-trait = "0.1"
futures = "0.3"
tower = "0.5.3"
tower-http = "0.6.8"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6.5"

[build-dependencies]
tonic-build = "0.14.5"

[[bin]]
name = "create_licenses"
path = "scripts/create_licenses.rs" 