[package]
name = "iron-babel"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Angelo <ryanangelo@icloud.com>"]
description = "A cross-protocol API gateway for seamless service communication"
license = "MIT"
default-run = "iron-babel"

[dependencies]
# Core async runtime
tokio = { version = "1.45", features = ["rt-multi-thread", "signal", "macros", "fs", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
zeromq = "0.4"

# HTTP server and client
axum = { version = "0.8.8", features = ["ws"] }
hyper = "1.1"
reqwest = { version = "0.12", features = ["json", "stream", "http2"] }
tokio-tungstenite = "0.24"

# Protocol support
tonic = "0.14.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
serde_yaml = "0.9"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

# Error handling
thiserror = "2.0.18"

# Utilities
async-trait = "0.1"
futures = "0.3"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["limit", "timeout", "trace"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6.5"


[[bin]]
name = "create_licenses"
path = "scripts/create_licenses.rs"

[[bin]]
name = "load_gen"
path = "src/bin/load_gen.rs"
